--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <body>
   <div class="backgroundImage"><h1>Broadway Design</h1></div>
-    <ul id="list">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#process">Process</a></li>
-      <li><a href="#work">Work</a></li>
-      <li><a href="#team">Team</a></li>
-      <li><a href="#contact">Contact</a></li>
+    <div id="list">
+      <br><a href="#home">Home</a>
+      <br><a href="#process">Process</a>
+      <br><a href="#work">Work</a>
+      <br><a href="#team">Team</a>
+      <br><a href="#contact">Contact</a>
     </ul>
   <h2 id="process">Our Process</h2>
     <h3>Identify</h3>
