--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
 </head>
 
 <body>
-  <div class="backgroundImage"><h1>Broadway Design</h1></div>
-    <div id="list">
-      <br><a href="#home">Home</a>
-      <br><a href="#process">Process</a>
-      <br><a href="#work">Work</a>
-      <br><a href="#team">Team</a>
-      <br><a href="#contact">Contact</a>
-    </ul>
-  <h2 id="process">Our Process</h2>
+  <div class="header">
+    <h1>Broadway Design</h1>
+  </div>
+    <div class="list">
+      <br>Home
+      <br>Process
+      <br>Work
+      <br>team
+      <b>Contact
+    </div>
+  <h2>Our Process</h2>
     <h3>Identify</h3>
     <h3>Understand</h3>
     <h3>Execut</h3>
-  <div class="backgroundMiddleSection">Designed in New York</div>
+  <div id="backgroundMiddleSection">Designed in New York</div>
     <h3>Portfolio</h3>
     <h3>Team</h3>
     <h3>Contact</h3>
 
-  <p>Broadway 2016 <a href="#home">Home</a><a href="#about">About</a><a href="#work">Work</a><a href="#team">Team</a><a href="#contact">Contact</a>
+  <div class="footer">Broadway 2016 Home About Work Team Contact</div>
 </body>
 </html>
