--- a/index.html
+++ b/index.html
@@ -8,23 +8,49 @@
 <body>
   <div class="header">
     <h1>Broadway Design</h1>
+    <p>
+      <a class="list" href="#home">Home</a>
+    </p>
+    <p>
+      <a class="list" href="#process">Process</a>
+    </p>
+    <p>
+      <a class="list" href="#work">Work</a>
+    </p>
+    <p>
+      <a class="list" href="#team">Team</a>
+    </p>
+    <p>
+      <a class="list"href="#contact">Contact</a>
+    </p>
   </div>
-    <div class="list">
-      <br>Home
-      <br>Process
-      <br>Work
-      <br>team
-      <b>Contact
-    </div>
+  </div>
   <h2>Our Process</h2>
+    <p><img src="resources/pictures/identify.svg" alt="loop"></p>
     <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+    <p><img src="resources/pictures/understand.svg" alt="circle"></p>
     <h3>Understand</h3>
+      <p>We study our projects inside and out</p>
+    <p><img src="resources/pictures/arrow.svg" alt="arrow"></p>
     <h3>Execut</h3>
-  <div id="backgroundMiddleSection">Designed in New York</div>
+      <p>We put everything we have into our work<p>
+  <div class="headerTwo">Designed in New York</div>
     <h3>Portfolio</h3>
-    <h3>Team</h3>
+      <p>Coming Soon</p>
+    <h3 id="team">Team</h3>
+      <p>We're Hiring!</p>
     <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
 
-  <div class="footer">Broadway 2016 Home About Work Team Contact</div>
+  <p class="footer">Broadway 2016 
+    <a class="list" href="#home">Home</a>
+    <a class="list" href="#about">About</a>
+    <a class="list" href="#work">Work</a>
+    <a class="list" href="#team">Team</a>
+    <a class="list" href="#contact">Contact</a>
+  </p>
 </body>
 </html>
